Add more basic structure and some initial contact to sections

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moore Action! | Coaching for personal development</title>    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
@@ -32,17 +33,51 @@
     </div>
 </nav>
 
-<section>
+<!--Landing Section-->
+<section id="landing-section" class="container container-fluid">
 Because everyone can benefit from taking more action!
 <img src="assets/images/coaching121.jpg" alt="One to one coaching">
 </section>
 
-<footer class="social">
-    <a href="https://linkedin.com"><i class="fab fa-linkedin"></i> LinkedIn</a>
+<!--Benefits of Coaching Section-->
+<section id="benefits" class="container container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <h2>The four benefits of Life Coaching</h2>
+                <p>Clarity & Direction</p>
+                <p>Goal Setting</p>
+                <p>Unbiassed feedback & Support</p>
+                <p>Holds you Accountable</p>
+        </div>
+    </div>    
+</section>
+
+<!--Services Offered Section-->
+
+<!--Footer Section-->
+<footer>
+    <div class="container container-fluid social-container">
+        <div class="row">
+            <div class="col-md-6 contact-info">
+                
+            </div>
+            <div class="col-md-6 social-links">
+                <a href="https://linkedin.com" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://linkedin.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://linkedin.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
+            </div>
+        </div>    
+        <div class row>
+            <div class="col-12 text-center">
+            <i class="far fa-copyright"></i> 2020 Copyright: Kane Moore
+            </div>
+        </div>
+    </div>    
 </footer>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 </body>
 </html>
