Added more text to the landing page and benefits section

--- a/index.html
+++ b/index.html
@@ -35,19 +35,53 @@
 
 <!--Landing Section-->
 <section id="landing-section" class="container container-fluid">
-Because everyone can benefit from taking more action!
+
 <img src="assets/images/coaching121.jpg" alt="One to one coaching">
+    <div id="cover-text">
+        <h2>Life Coaching</h2>
+        <h3>Because everyone can benefit from taking more action!</h3>
+    </div>
 </section>
 
 <!--Benefits of Coaching Section-->
 <section id="benefits" class="container container-fluid">
     <div class="row">
+        <h2>The four benefits of Life Coaching</h2>
         <div class="col-12">
-            <h2>The four benefits of Life Coaching</h2>
-                <p>Clarity & Direction</p>
-                <p>Goal Setting</p>
-                <p>Unbiassed feedback & Support</p>
-                <p>Holds you Accountable</p>
+            <div id="left-about">
+                <div class="top-left-about-heading">
+                    <h2>Clarity & Direction <i class="fas fa-heartbeat"></i></h2>
+                    <hr>
+                    <p>
+                    What you want, why you want it; and how you can get it.
+                    </p>
+                </div>
+                <div class="bottom-left-about-heading">
+                    <h2>Goal Setting <i class="fas fa-heartbeat"></i></h2>
+                    <hr>
+                    <p>
+                    Underestanding where you would like to be in the future and the steps to get there is invauable.
+                    </p>
+                </div>
+            </div>
+            <div id="right-about">
+                <div class="top-right-about-heading">
+                    <h2>Unbiassed feedback & Support <i class="fas fa-heartbeat"></i></h2>
+                    <hr>
+                    <p>
+                    Your coach will make you more aware of the limiting beliefs, thoughts and assumptions that might be stopping you moving 
+                    forward. 
+                    </p>
+                </div>
+                <div class="bottom-right-about-heading">
+                    <h2>Holds you Accountable <i class="fas fa-heartbeat"></i></h2>
+                    <hr>
+                    <p>
+                    Accountability is a critical component in an individuals pursuit of their dreams and goals. Coaching helps by providing additional accountability from
+                     somone other than ourselves.
+                    </p>
+                </div>
+            </div>                
         </div>
     </div>    
 </section>
